<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sampleui="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".PlayerActivity">

    <com.wowza.gocoder.sdk.api.player.WOWZPlayerView
        android:id="@+id/vwStreamPlayer"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="false"
        android:layout_centerInParent="true" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:layout_gravity="end|center_vertical"
        android:background="#00ffffff"
        android:clickable="false"
        android:padding="10dp"
        android:textAlignment="center">

        <com.t4.androidclient.ui.MultiStateButton
            android:id="@+id/ic_mic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="#000000ff"
            android:contentDescription="@string/mute_button"
            android:onClick="onToggleMute"
            android:src="@drawable/ic_speaker_on"
            sampleui:offSrc="@drawable/ic_speaker_off" />

        <SeekBar
            android:id="@+id/sb_volume"
            android:layout_width="250dip"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="false"
            android:layout_centerHorizontal="false"
            android:layout_centerVertical="false"
            android:layout_toEndOf="@+id/ic_mic"
            android:max="100" />

        <com.t4.androidclient.ui.MultiStateButton
            android:id="@+id/ic_scale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="#000000ff"
            android:contentDescription="@string/scale_button"
            android:onClick="onToggleScaleMode"
            android:src="@drawable/ic_scale_fill_view"
            sampleui:offSrc="@drawable/ic_scale_keep_aspect" />

        <com.t4.androidclient.ui.TimerView
            android:id="@+id/txtTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/rounded_corner"
            android:text="@string/zero_time"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:typeface="normal" />

        <ImageButton
            android:id="@+id/imgBtnStreamInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/wz_live_stream_name_title"
            android:onClick="onStreamMetadata"
            android:src="@drawable/ic_stream_info"
            android:visibility="gone" />

        <Button
            android:id="@+id/pause_network"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="false"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:onClick="onPauseNetwork"
            android:text="@string/wz_pause_network"
            android:visibility="gone" />

        <com.t4.androidclient.ui.MultiStateButton
            android:id="@+id/ic_play_stream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="#000000ff"
            android:cropToPadding="false"
            android:onClick="onTogglePlayStream"
            android:src="@drawable/ic_stop"
            sampleui:offSrc="@drawable/ic_play_stream" />

        <com.t4.androidclient.ui.MultiStateButton
            android:id="@+id/ic_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:background="#000000ff"
            android:onClick="onSettings"
            android:src="@drawable/ic_settings" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/vwHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/streamPlayerHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:text="@string/press_the_gear"
            android:textAlignment="center"
            android:textIsSelectable="true"
            android:textSize="16sp" />

    </LinearLayout>

    <com.t4.androidclient.ui.StatusView
        android:id="@+id/statusView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:visibility="invisible">

    </com.t4.androidclient.ui.StatusView>

</RelativeLayout>
