<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sampleui="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:wowza="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    tools:context=".CameraActivity">

    <FrameLayout
        android:id="@+id/cameraView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0d0d0d">

        <com.wowza.gocoder.sdk.api.devices.WOWZCameraView
            android:id="@+id/cameraPreview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            wowza:defaultCamera="back"
            wowza:frameSizePreset="frameSize1280x720"
            wowza:scaleMode="fill" />

    </FrameLayout>
    <RelativeLayout
        android:id="@+id/container_comments"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/container_comments_popup"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:fitsSystemWindows="true"
        android:background="@color/browser_actions_bg_grey">
        <TextView
            android:padding="@dimen/dp_medium"
            android:id="@+id/comment_popup_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/comment_popup_reply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:hint="Write a message"
            android:inputType="text"
            android:paddingHorizontal="10dp"
            />

        <ImageButton
            android:id="@+id/comment_popup_btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:padding="20dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/arrow"/>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_above="@id/container_comments_popup"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="false"
        android:layout_gravity="end|center_vertical"
        android:background="#32000000"
        android:padding="15dp"
        android:paddingLeft="10dp"
        android:paddingTop="15dp"
        android:paddingRight="10dp"
        android:paddingBottom="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="false"
            android:orientation="horizontal">

            <com.t4.androidclient.ui.MultiStateButton
                android:id="@+id/ic_switch_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#000000ff"
                android:contentDescription="@string/switch_camera"
                android:cropToPadding="false"
                android:onClick="onSwitchCamera"
                android:padding="10dp"
                android:src="@drawable/ic_switch_camera" />

            <com.t4.androidclient.ui.MultiStateButton
                android:id="@+id/ic_torch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#000000ff"
                android:onClick="onToggleTorch"
                android:padding="10dp"
                android:src="@drawable/ic_torch_off"
                sampleui:offSrc="@drawable/ic_torch_on" />

        </LinearLayout>

        <com.t4.androidclient.ui.MultiStateButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ic_broadcast"
            android:src="@drawable/ic_stop"
            sampleui:offSrc="@drawable/ic_start"
            android:layout_alignParentBottom="true"
            android:onClick="onToggleBroadcast"
            android:cropToPadding="false"
            android:background="#000000ff"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:visibility="gone"
            />


        <com.github.ybq.android.spinkit.SpinKitView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/btn_spin_kit"
            style="@style/SpinKitView.Large.Wave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_toEndOf="@id/ic_broadcast"
            android:cropToPadding="false"
            android:visibility="visible"
            app:SpinKit_Color="@color/com_facebook_blue" />

        <com.t4.androidclient.ui.MultiStateButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ic_settings"
            android:src="@drawable/ic_settings"
            android:onClick="onSettings"
            android:background="#000000ff"
            android:padding="10dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:visibility="gone"/>

        <com.t4.androidclient.ui.TimerView
            android:id="@+id/txtTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rounded_corner"
            android:text="@string/zero_time"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/mp4Controls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/switch_mp4"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Switch
                android:id="@+id/swSaveMP4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:visibility="visible" />
        </LinearLayout>

    </RelativeLayout>

    <com.t4.androidclient.ui.StatusView
        android:id="@+id/statusView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"/>
</RelativeLayout>
